Fixed relaitive paths.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-dinky
 layout: default
 title: Pattern Library
-baseurl: /nt-pattern-library/
+baseurl: /nt-pattern-library
 collections:
   patterns:
     output: true
